--- a/server/src/dashboard_content/dashboard-styles.css
+++ b/server/src/dashboard_content/dashboard-styles.css
@@ -103,8 +103,19 @@ textarea {
   font: 400 15px/1.8 "Lato", sans-serif;
 }
 
-.submitBtn {
-  width: 100%;
+.voteBtn {
+  width: 8%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.nameBtn {
+  width: 20%;
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
