--- a/server/src/dashboard_content/dashboard-styles.css
+++ b/server/src/dashboard_content/dashboard-styles.css
@@ -6,7 +6,7 @@ body, html {
 }
 
 html { 
-  background: url(bg-test.png) no-repeat center center fixed; 
+  background: url(http:///*SERVER-ADDRESS*/:8080/bg-test2.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
