Fix dashboard issues with adding new users. Update user list

--- a/server/src/food_dashboard_content/food-dashboard-styles.css
+++ b/server/src/food_dashboard_content/food-dashboard-styles.css
@@ -35,6 +35,11 @@ h1 {
   color: #8b4513; /* Darker brown for subheadings */
 }
 
+.meal-table h4 {
+  margin-bottom: 10px;
+  color: #8b4513; /* Darker brown for subheadings */
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
