--- a/server/src/food_dashboard_content/food-dashboard-styles-xmas.css
+++ b/server/src/food_dashboard_content/food-dashboard-styles-xmas.css
@@ -21,6 +21,12 @@
     margin-bottom: 20px;
     color: #ff0000; /* Christmas red */
   }
+
+  h3 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #990000; /* Christmas red */
+  }
   
   .meal-table {
     margin-bottom: 30px;
